add cancelation fee and each clerkof company
